--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,3 +33,6 @@ jobs:
         password: ${{ secrets.ACR_PASSWORD }}
         # Container registry server url
         login-server: ${{ secrets.ACR_SERVER }}
+    - run: |
+        docker build -f src/Web/Dockerfile . -t ${{ secrets.ACR_SERVER }}/eshop:${{ github.run_id }}   
+        docker push ${{ secrets.ACR_SERVER }}/eshop:${{ github.run_id }}   
