--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,7 +23,12 @@ jobs:
       run: dotnet build ./eShopOnWeb.sln --configuration Release
     - name: Test
       run: dotnet test ./eShopOnWeb.sln --configuration Release
-
+  buildPushAppImage:
+    needs: build
+    name: Build and Push to ACR
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
     - name: Azure Container Registry Login
       uses: Azure/docker-login@v1
       with:
